--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,30 +2,37 @@ version: "3.9"
 
 services:
   backend:
+    container_name: try-cb-api
     build: .
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     ports:
       - 8080:8080
     volumes:
       - .:/app
-    container_name: try-cb-api
   
   frontend:
-      build: "https://github.com/couchbaselabs/try-cb-frontend-v2.git#7.0"
-      depends_on:
-        - backend
-      ports:
-        - 8081:8081
-      container_name: try-cb-fe
-      entrypoint: ["wait-for-it", "backend:8080", "--timeout=400", "--strict", "--", "npm", "run", "serve"]
+    container_name: try-cb-fe
+    build: "https://github.com/couchbaselabs/try-cb-frontend-v2.git#7.0"
+    depends_on:
+      backend:
+        condition: service_started
+    ports:
+      - 8081:8081
+    entrypoint: ["wait-for-it", "backend:8080", "--timeout=400", "--strict", "--", "npm", "run", "serve"]
 
   db:
     image: couchbase/server-sandbox:7.0.0-beta
+    container_name: couchbase-sandbox-7.0.0-beta
     ports:
       - "8091-8095:8091-8095"
       - "11210:11210"
     expose: # expose ports 8091 & 8094 to other containers (mainly for backend)
       - "8091"
       - "8094"
-    container_name: couchbase-sandbox-7.0.0-beta
+    healthcheck: # checks couchbase server is up
+      test: ["CMD", "curl", "--head", "http://localhost:8091/pools"]
+      interval: 20s
+      timeout: 20s
+      retries: 2
