--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,18 @@ services:
     container_name: try-cb-api
     build: .
     depends_on:
-      db:
-        condition: service_healthy
+      - db
     ports:
       - 8080:8080
-    volumes:
-      - .:/app
-  
+
   frontend:
     container_name: try-cb-fe
     build: "https://github.com/couchbaselabs/try-cb-frontend-v2.git#7.0"
     depends_on:
-      backend:
-        condition: service_started
+      - backend
     ports:
       - 8081:8081
-    entrypoint: ["wait-for-it", "backend:8080", "--timeout=400", "--strict", "--", "npm", "run", "serve"]
+    entrypoint: [ "wait-for-it", "backend:8080", "--timeout=400", "--strict", "--", "npm", "run", "serve" ]
 
   db:
     image: couchbase/server-sandbox:7.0.0-beta
@@ -31,8 +27,3 @@ services:
     expose: # expose ports 8091 & 8094 to other containers (mainly for backend)
       - "8091"
       - "8094"
-    healthcheck: # checks couchbase server is up
-      test: ["CMD", "curl", "--head", "http://localhost:8091/pools"]
-      interval: 20s
-      timeout: 20s
-      retries: 2
