Fixes for running on Docker Ubuntu image.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,11 @@
         "version": "c",
         "new": "c",
         "sstream": "c",
-        "streambuf": "c"
+        "streambuf": "c",
+        "try-cb-lcb.h": "c",
+        "stdbool.h": "c",
+        "strings.h": "c",
+        "util.h": "c",
+        "string.h": "c"
     }
 }
