--- a/conf/build.conf
+++ b/conf/build.conf
@@ -2,9 +2,9 @@
 # You can switch flavors using: kodev flavor [newflavor]
 
 # The flags below are shared between flavors
-cflags=-Wall -Wpedantic -Wextra -Wshadow
+cflags=-std=c11 -D_POSIX_C_SOURCE=200809L -D_XOPEN_SOURCE=700 -Wall -Wpedantic -Wextra -Wshadow
 
-ldflags=-lcouchbase -lcjson -ljwt
+ldflags=-lcouchbase -ljwt
 
 # Mime types for assets served via the builtin asset_serve_*
 #mime_add=txt:text/plain; charset=utf-8
