--- a/mix-and-match.yml
+++ b/mix-and-match.yml
@@ -9,9 +9,6 @@ services:
       - CB_HOST
       - CB_USER
       - CB_PSWD
-    command: -c $CB_HOST -u $CB_USER -p $CB_PSWD
-    volumes:
-      - .:/app
     container_name: try-cb-api-mm
 
   frontend:
@@ -21,7 +18,7 @@ services:
     container_name: try-cb-fe-mm
 
   db:
-    image: couchbase/server-sandbox:7.0.0-beta
+    image: couchbase/server-sandbox:7.0.0
     ports:
       - "8091-8095:8091-8095"
       - "9102:9102"
@@ -29,4 +26,4 @@ services:
     expose:
       - "8091"
       - "8094"
-    container_name: couchbase-sandbox-7.0.0-beta-mm
+    container_name: couchbase-sandbox-7.0.0-mm
