Attempt to run backend in Docker

--- a/conf/build.conf
+++ b/conf/build.conf
@@ -2,7 +2,7 @@
 # You can switch flavors using: kodev flavor [newflavor]
 
 # The flags below are shared between flavors
-cflags=-Wall -Wpedantic -Wextra -Wshadow
+cflags=-std=c11 -Wall -Wpedantic -Wextra -Wshadow
 
 ldflags=-lcouchbase -lcjson -ljwt
 
