Fix Dockerfile running on Ubuntu Linux
 * remove `apt-get` install of kore, as it is outdated version
 * install as per https://docs.kore.io/4.1.0/install.html
 * Kore under Linux filters syscalls using seccomp
   * see https://docs.kore.io/4.1.0/api/seccomp.html
   * this then shuts down the worker processes as soon as libcouchbase makes a
     disallowed syscall
   * added tracing `seccomp_tracing yes` to config, to enable logging of the
     offending syscalls
   * declare those calls in the C source
 * Add `set -x` to wait-for-couchbase for better logging of what command is
   executed
 * Change bound IP address to 0.0.0.0, which is required when connecting from
   outside the Docker container (e.g. from web browser running on the host)

--- a/conf/try-cb-lcb.conf
+++ b/conf/try-cb-lcb.conf
@@ -1,11 +1,13 @@
 # try-cb-lcb configuration
 
 server notls {
-    bind 127.0.0.1 8080
+    bind 0.0.0.0 8080
     tls no
 }
 
 load ./try-cb-lcb.so
+
+seccomp_tracing yes
 
 domain * {
     attach      notls
