--- a/conf/build.conf
+++ b/conf/build.conf
@@ -4,7 +4,7 @@
 # The flags below are shared between flavors
 cflags=-std=c11 -D_POSIX_C_SOURCE=200809L -D_XOPEN_SOURCE=700 -Wall -Wpedantic -Wextra -Wshadow
 
-ldflags=-lcouchbase -ljwt
+ldflags=-lcouchbase -ljwt -luuid
 
 # Mime types for assets served via the builtin asset_serve_*
 #mime_add=txt:text/plain; charset=utf-8
